force-app/main/default/objects/Udalost__c/Udalost__c.object-meta.xml
<CustomObject>
    <label>Událost</label>
    <nameField>
        <label>Název Události</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Události</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>