force-app/main/default/objects/Udalost__c/fields/Datum_Ud_losti__c.field-meta.xml
<CustomField>
    <fullName>Datum_Ud_losti__c</fullName>
    <label>Datum Události</label>
    <type>DateTime</type>
</CustomField>