force-app/main/default/objects/Udalost__c/fields/Lokace__c.field-meta.xml
<CustomField>
    <fullName>Lokace__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lokace</label>
    <referenceTo>Lokace__c</referenceTo>
    <relationshipLabel>Události</relationshipLabel>
    <relationshipName>Udalosti</relationshipName>
    <type>Lookup</type>
</CustomField>