force-app/main/default/objects/Udalost__c/fields/Popis__c.field-meta.xml
<CustomField>
    <fullName>Popis__c</fullName>
    <label>Popis</label>
    <type>TextArea</type>
</CustomField>