force-app/main/default/objects/Udalost__c/fields/Schvalene_rezervace__c.field-meta.xml
<CustomField>
    <fullName>Schvalene_rezervace__c</fullName>
    <label>Schválené rezervace</label>
    <summaryFilterItems>
        <field>Rezervace__c.Stav__c</field>
        <operation>equals</operation>
        <value>Schválená</value>
    </summaryFilterItems>
    <summaryForeignKey>Rezervace__c.Udalost__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>