force-app/main/default/objects/Udalost__c/fields/Zam_tnut_Rezervace__c.field-meta.xml
<CustomField>
    <fullName>Zam_tnut_Rezervace__c</fullName>
    <label>Zamítnuté Rezervace</label>
    <summaryFilterItems>
        <field>Rezervace__c.Stav__c</field>
        <operation>equals</operation>
        <value>Zamítnuta</value>
    </summaryFilterItems>
    <summaryForeignKey>Rezervace__c.Udalost__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>