force-app/main/default/objects/Udalost__c/fields/Zb_vaj_c_kapacita__c.field-meta.xml
<CustomField>
    <fullName>Zb_vaj_c_kapacita__c</fullName>
    <formula>Lokace__r.Kapacita__c -  Schvalene_rezervace__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zbývající kapacita</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>