force-app/main/default/objects/Udalost__c/recordTypes/Konference.recordType-meta.xml
<RecordType>
    <fullName>Konference</fullName>
    <active>true</active>
    <label>Konference</label>
</RecordType>