force-app/main/default/objects/Udalost__c/recordTypes/Skoleni.recordType-meta.xml
<RecordType>
    <fullName>Skoleni</fullName>
    <active>true</active>
    <label>Školeni</label>
</RecordType>