force-app/main/default/objects/Udalost__c/recordTypes/Vecirek.recordType-meta.xml
<RecordType>
    <fullName>Vecirek</fullName>
    <active>true</active>
    <label>Večírek</label>
</RecordType>