force-app/main/default/objects/Udalost__c/validationRules/pokus.validationRule-meta.xml
<ValidationRule>
    <fullName>pokus</fullName>
    <active>false</active>
    <errorConditionFormula>Lokace__r.Kapacita__c &gt;  Schvalene_rezervace__c</errorConditionFormula>
    <errorMessage>dasdsad</errorMessage>
</ValidationRule>