force-app/main/default/objects/Udalost__c/listViews/Schavlovatele_Udalost.listView-meta.xml
<ListView>
    <fullName>Schavlovatele_Udalost</fullName>
    <filterScope>Queue</filterScope>
    <label>Schavlovatele</label>
    <queue>Schavlovatele</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>